# SMART_SYSTEMS

./: .gitignore  CMakeLists.txt  desktop.ini  info.md  main.cpp
Assignments/Assignment_1_/: Opdracht_0_Smart_Detection_Idee_OliwierJaworski_JusticeLacroix.docx  README.md  Research.txt
Assignments/Assignment_1_/DEV_/APP_/: CMakeLists.txt  CMakePresets.json  main.cpp
Assignments/Assignment_1_/MT-threading/: README.md
Assignments/Assignment_1_/RTSP-PYTHON_IN_OUT/: requirements.txt
Assignments/Assignment_1_/RTSP_PYTHON_IN_OUT/: README.md  deepstream_test1_rtsp_in_rtsp_out.py
Assignments/Assignment_1_/RTSP_noVLC_support/: README.md
Assignments/Assignment_1_/RTSP_noVLC_support/src/: main.c
Assignments/Assignment_1_/src_MT-threading/: CMakeLists.txt  main.c
Assignments/Assignment_1_/src_VLC/: README.md  main.c
Assignments/Assignment_2_/flesjesoutputt/: obj.names  train.txt
Assignments/Assignment_2_/flesjesoutputt/obj_train_data/: IMG_5221.txt  IMG_5227.txt  IMG_5228.txt  IMG_5230.txt  IMG_5231.txt  IMG_5232.txt  IMG_5235.txt  IMG_5236.txt  IMG_5246.txt  IMG_5247.txt  IMG_5248.txt  IMG_5250.txt  IMG_5255.txt  IMG_5258.txt  IMG_5261.txt  IMG_5267.txt  IMG_5268.txt  IMG_5270.txt  IMG_5272.txt
Assignments/Assignment_2_/waterflesjes/: obj.names  train.txt
Assignments/Assignment_2_/waterflesjes/obj_train_data/: IMG_4972.txt  IMG_4973.txt  IMG_4974.txt  IMG_4975.txt  IMG_4976.txt  IMG_4977.txt  IMG_4978.txt  IMG_4979.txt  IMG_4980.txt  IMG_4981.txt  IMG_4982.txt  IMG_4983.txt  IMG_4984.txt  IMG_4985.txt  IMG_4986.txt  IMG_4987.txt  IMG_4988.txt  IMG_4989.txt  IMG_4990.txt  IMG_4991.txt  IMG_4992.txt  IMG_4993.txt  IMG_4994.txt  IMG_4995.txt  IMG_4996.txt  IMG_4997.txt  IMG_4998.txt  IMG_4999.txt  IMG_5001.txt  IMG_5002.txt  IMG_5003.txt  IMG_5004.txt  IMG_5005.txt  IMG_5006.txt  IMG_5007.txt  IMG_5008.txt  IMG_5009.txt  IMG_5010.txt  IMG_5011.txt  IMG_5012.txt  (+17 more)
Assignments/Assignment_3_/: .gitignore  README.md
Assignments/Assignment_3_/YOLO_11_MODEL/src/: Fles_dataset.yaml
Assignments/Assignment_3_/src/AI_Model/: __main__.py
Assignments/Assignment_3_/src/YOLO_11_MODEL/: Fles_dataset.yaml  __main__.py  pyproject.toml
Assignments/Assignment_3_/src/YOLO_11_MODEL/Data/labels/test/: IMG_5265.txt  IMG_5271.txt
Assignments/Assignment_4_/: README.md
Assignments/Assignment_4_/TensorRT/: CMakeLists.txt  CMakePresets.json  info.md  main.cpp
Assignments/Assignment_4_/TensorRT/include/: TRT_MODEL.h
Assignments/Assignment_4_/TensorRT/src/: TRT_MODEL.cpp  TRT_engine.cpp  TRT_engine.h  main.cpp
Assignments/Assignment_4_/TensorRT_/: CMakeLists.txt  info.md  main.cpp
Assignments/Assignment_4_/TensorRT_/include/: TRT_MODEL.h
Assignments/Assignment_4_/TensorRT_/src/: TRT_MODEL.cpp  main.cpp  preprocess.cu
Assignments/Assignment_4_/Yolo-v11-cpp-tensorRT/: info.md  main.cpp
Assignments/Assignment_4_/Yolo-v11-cpp-tensorRT/config_files/: labels.txt  nvinfer_config.txt  tracker_config.txt  trtexec_output.txt
Assignments/Assignment_4_/Yolo-v11-cpp-tensorRT/config_files/nvdsinfer_customparser/my_implementation/: Makefile  yolov5_custombboxparser.cpp
Assignments/Assignment_4_/Yolo-v11-cpp-tensorRT/config_files/nvdsinfer_customparser/nvidia_example/: Makefile  nvdsinfer_custombboxparser.cpp
Assignments/Assignment_4_/deepstream_image/: CMakeLists.txt  CMakePresets.json  dstestsr_pgie_config.txt  main.cpp  main.cpp_
Assignments/Assignment_4_/model_training/: README.md
Assignments/Assignment_4_/model_training/src/: Fles_dataset.yaml  __main__.py  pyproject.toml
Assignments/Assignment_4_/model_training/src/data/labels/train/: IMG_5222.txt  IMG_5225.txt  IMG_5226.txt  IMG_5229.txt  IMG_5234.txt  IMG_5239.txt  IMG_5241.txt  IMG_5242.txt  IMG_5245.txt  IMG_5251.txt  IMG_5254.txt  IMG_5256.txt  IMG_5259.txt
Assignments/Assignment_4_/model_training/src/data/labels/val/: IMG_5262.txt  IMG_5264.txt  IMG_5266.txt  IMG_5269.txt  IMG_5273.txt
Assignments/Assignment_4_/model_training/src/results/Dataset/: obj.names  train.txt
Assignments/Assignment_4_/model_training/src/results/Dataset/labels/: train.cache  val.cache
Assignments/Assignment_4_/model_training/src/results/Dataset/labels/train/: image00001.txt  image00002.txt  image00003.txt  image00004.txt  image00005.txt  image00006.txt  image00007.txt  image00008.txt  image00009.txt  image00011.txt  image00012.txt  image00013.txt  image00014.txt  image00015.txt  image00016.txt  image00017.txt  image00018.txt  image00019.txt  image00020.txt  image00021.txt  image00022.txt  image00023.txt  image00024.txt  image00025.txt  image00027.txt  image00028.txt  image00029.txt  image00030.txt  image00031.txt  image00032.txt  image00033.txt  image00034.txt  image00035.txt  image00036.txt  image00038.txt  image00039.txt  image00040.txt  image00041.txt  image00042.txt  image00043.txt  (+105 more)
Assignments/Assignment_4_/model_training/src/results/Dataset/labels/val/: image00010.txt  image00037.txt  image00090.txt  image00103.txt  image00116.txt  image1.txt  image2.txt  image27.txt  image28.txt  image6.txt
Assignments/Assignment_4_/model_training/src/results/model/model_15EP/: args.yaml  results.csv
Assignments/Assignment_4_/model_training/src/results/model/model_20EP/: args.yaml  results.csv
Assignments/Assignment_4_/model_training/src/results/model/model_25EP/: args.yaml  results.csv
Assignments/Assignment_4_/model_training/src/results/model/model_40EP/: args.yaml  results.csv
Assignments/Assignment_4_/model_training/src/results/model/model_60EP/: args.yaml  results.csv
Assignments/Assignment_4_/model_training/src/src/: Fles_dataset.yaml
Assignments/Assignment_4_/python_apps/: test.py
RTSP_S/: CMakeLists.txt  main.cpp
Working_/: CMakeLists.txt  main.cpp
include/: common.h
runs/detect/train/: args.yaml
runs/detect/train10/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml
runs/detect/train9/: args.yaml
(+14 files in other folders)
