[tool.poetry]
name = "yolo-11_ai"
version = "0.1.0"
description = "a model based on Yolo11"
authors = ["oliwier"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.5.1"
torchvision = "0.20.1"
ultralytics = "8.3.31"
pandas = "2.2.3"
scikit-learn = "1.5.2"
opencv-python = "4.10.0.84"
matplotlib = "3.9.2"
numpy = ">=1.23.0,<2.0.0"
requests = "2.32.3"
seaborn = "0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
